service.yml
apiVersion: v1
kind: Service
metadata:
  name: ptg-k8s-project
  labels:
    app: ptg-k8s-project
    source: hsrn-tutorial
spec:
  type: ClusterIP # This is the default, a virtual IP address will be allocated
  selector:
    # This is how the Service will find the Pods
    app: ptg-k8s-project
  ports:
    - name: web
      protocol: TCP
      port: 80 # The port exposed by the service
      # targetPort: 5000 # The port or port name of the Pod
      targetPort: 80 # The port or port name of the Pod
